# quant-lab

./: README.md  Taskfile.yml  pyproject.toml
.github/workflows/: daily-optimisation.yml
docs/: ARCHITECTURE.md
src/: extractor.py  main.py  optimiser.py
src/factors/: __init__.py
src/strategies/: __init__.py  mean_reversion.py
tests/: test_factors.py  test_mean_reversion.py  test_optimiser.py
