[tool.poetry]
name = "quant-lab"
version = "0.1.0"
description = "Quantitative trading experiments. Currently: Prophet forecasting + Markowitz allocation. Adding more techniques over time."
authors = ["Rusydan Eiman <zaghrusydan@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"  # Allow 3.11, 3.12, 3.13, 3.14. We tested on 3.13.
numpy = ">=1.24.0,<3.0"
pandas = ">=2.0.0,<3.0"
scipy = ">=1.11.0,<2.0"
yfinance = ">=0.2.28,<0.3"
scikit-learn = ">=1.3.0,<2.0"  # For future ML strategies
matplotlib = ">=3.7.0,<4.0"  # For backtest visualization
seaborn = ">=0.12.0,<2.0"  # Statistical plotting
jupyter = ">=1.0.0,<2.0"  # Dev environment
ipykernel = ">=6.25.0,<7.0"  # For Jupyter
prophet = ">=1.1.5,<2.0"
supabase = ">=2.23.0,<3.0"
streamlit = ">=1.28.0,<2.0"
pandas-market-calendars = ">=5.1.0,<6.0"
plotly = ">=6.4.0,<7.0"
altair = ">=5.5.0,<6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0,<9.0"
pytest-cov = ">=4.1.0,<6.0"
pytest-mock = ">=3.11.0,<4.0"
black = ">=23.7.0,<26.0"
ruff = ">=0.0.285,<2.0"
mypy = ">=1.5.0,<2.0"
pre-commit = ">=3.4.0,<5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
]